## 0.3.0 / ...

  * Implement low level #purge method on all concrete entity store
    classes -- removes the entity body corresponding to the SHA1 key
    provided and returns nil.
  * Basically sane handling of HEAD requests. A HEAD request is never passed
    through to the backend except when transitioning with pass!. This means
    that the cache responds to HEAD requests without invoking the backend at
    all when the cached entry is fresh. When no cache entry exists, or the
    cached entry is stale and can be validated, the backend is invoked with
    a GET request and the HEAD handling is handled right before the response
    is delivered upstream.
  * Cache responses that have a Transfer-Encoding. The current implementation
    caches the encoded value and reproduces the message with the same
    Transfer-Encoding header on subsequent cache hits. This goes against
    RFC 2616, which says that intermediaries must fully decode responses with
    a Transfer-Encoding header before passing them on (though they may re-encode
    or apply a different encoding). This seems less relevant to Rack::Cache,
    however, since we're not a true "hop". We'll see how it goes and act
    accordingly.
  * BUG: The Age response header was not being set properly when a stale
    entry was validated. This would result in Age values that exceeded
    the freshness lifetime in responses.
  * BUG: A cached entry in a heap meta store could be unintentionally
    modified by request processing since the cached objects were being
    returned directly. The result was typically missing/incorrect header
    values (e.g., missing Content-Type header). [dkubb]
  * BUG: 304 responses should not include entity headers (especially
    Content-Length). This is causing Safari/WebKit weirdness on 304
    responses.
  * BUG: The If-None-Match header was being ignored, causing the cache
    to send 200 responses to matching conditional GET requests.

## 0.2.0 / 2008-10-24 / Initial Release
