@@ -1,6 +1,5 @@
 ## 0.3
 
-  - BUG: meta store hits but entity misses
   - liberal, conservative, sane caching configs
   - Sample app
   - busters.rb doc and tests
